<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:icon="@drawable/ic_heart_outline_24dp"
        app:showAsAction="always"
        android:title="@string/favorite" />

</menu>