<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pessoadev.marvelapp.presentation.characters.fragments.FavoriteFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewNoFavorite"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/nointernet"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewNoFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textSize="22sp"
        android:text="@string/no_favorites"
        app:layout_constraintEnd_toEndOf="@+id/imageViewNoFavorite"
        app:layout_constraintStart_toStartOf="@+id/imageViewNoFavorite"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNoFavorite" />

</androidx.constraintlayout.widget.ConstraintLayout>
